@@ -10,8 +10,8 @@ INIT_BUILTIN_MESSAGE_TYPES = getattr(settings, 'SITEMESSAGE_INIT_BUILTIN_MESSAGE
 # Priority for messages sent by Django Email backend (sitemessage.backends.EmailBackend).
 EMAIL_BACKEND_MESSAGES_PRIORITY = getattr(settings, 'SITEMESSAGE_EMAIL_BACKEND_MESSAGES_PRIORITY', None)
 
-# Message type alias for messages sent `schedule_email` shortcut.
-DEFAULT_SHORTCUT_EMAIL_MESSAGES_TYPE = getattr(settings, 'SITEMESSAGE_DEFAULT_SHORTCUT_EMAIL_MESSAGES_TYPE', 'smtp')
+# Messenger type alias for messages sent with `schedule_email` shortcut.
+SHORTCUT_EMAIL_MESSENGER_TYPE = getattr(settings, 'SITEMESSAGE_SHORTCUT_EMAIL_MESSENGER_TYPE', 'smtp')
 
 # Site URL to use in messages.
 SITE_URL = getattr(settings, 'SITEMESSAGE_SITE_URL', None)
